live_search: fix edge cases on small screens
- the app_layout stacking (z-index) needed a cleanup:
  regions determine the z-index of their children, thus the need to set a z-index at that level
- fixed problem with parameters climbing up the screen

--- a/app/modules/general/scss/_app_layout.scss
+++ b/app/modules/general/scss/_app_layout.scss
@@ -1,4 +1,13 @@
+#topBar{
+  // Required to set a z-index
+  position: relative;
+  // Make the top bar appear above main
+  z-index: 1;
+}
+
 main{
+  position: relative;
+  z-index: 0;
   /*Small screens*/
   @media screen and (max-width: $small-screen) {
     // Allow screen_.scrollTop to really get the top of the div
@@ -11,4 +20,8 @@ main{
   @media screen and (min-height: $top-bar-fixed-threshold) {
     margin-top: $topbar-height;
   }
+}
+
+#modalWrapper{
+  z-index: 2;
 }
