--- a/app/modules/general/scss/_modal.scss
+++ b/app/modules/general/scss/_modal.scss
@@ -12,8 +12,6 @@ $largeModalWidth: 60em;
   }
 }
 
-#modalWrapper{ z-index: 20; }
-
 // Add this class to the body to make the modalWrapper scroll the only scroll
 // while the modal is opened
 body.openedModal{
